--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <meta property="og:title" content="Gabriela & Leandro - Wedding Celebration" />
     <meta property="og:description" content="Join us to celebrate Gabriela and Leandro's special day - October 5-7, 2025" />
-    <meta property="og:type" content="website" />    
+    <meta property="og:type" content="website" />  
+    
+    <meta property="og:url" content="https://casamos.info" />
 
     <meta name="twitter:card" content="summary_large_image" />    
   </head>
